--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body id="body">
     <!-- the entire body must be written by student -->
     <form id="form">
       <label for="fontsize">Font Size:</label>
@@ -21,6 +21,7 @@
       <label for="fontcolor">Font Color:</label>
       <input type="color" id="fontcolor" name="fontcolor" value="#000000" />
       <br />
+		
       <input type="submit" value="Save"  />
     </form>
 
